syntax = "proto3";

package user.v1;

option go_package = "github.com/go-kratos/kratos-layout/api/user/v1;v1";

enum ErrorReason {
  USER_UNSPECIFIED = 0;
  USER_NOT_FOUND = 1;
  USER_ALREADY_EXISTS = 2;
  INVALID_PASSWORD = 3;
}

